--- a/index.html
+++ b/index.html
@@ -923,8 +923,8 @@ renderActiveTab();
 lucide.createIcons();
 
 // ✅ Supabase connection
-const SUPABASE_URL = "https://YOUR_PROJECT_ID.supabase.co";
-const SUPABASE_ANON_KEY = "YOUR_PUBLIC_ANON_KEY";
+const SUPABASE_URL = "https://poziexgvpddxkyuwtoeh.supabase.co";
+const SUPABASE_ANON_KEY = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InBvemlleGd2cGRkeGt5dXd0b2VoIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NTU1NjA5NjUsImV4cCI6MjA3MTEzNjk2NX0.vs2d8Jm-pPEBTjthCTYfhvrte8dBzy_kVe1tASxNgHU";
 
 const supabase = window.supabase.createClient(SUPABASE_URL, SUPABASE_ANON_KEY);
 
@@ -953,3 +953,4 @@ loadMessages();
 </script>
 </body>
 </html>
+
